# zedis

./: CHANGELOG.md  Cargo.toml  Entitlements.plist  Makefile  README.md  README_zh.md  app_store_build.sh  dev.md  typos.toml
.github/workflows/: publish.yml  test.yml
assets/: zedis.desktop
icons/: zedis.icns
locales/: en.toml  zh.toml
src/: assets.rs  connection.rs  db.rs  error.rs  helpers.rs  main.rs  states.rs  views.rs
src/components/: editor.rs  key_tree.rs  kv_delegate.rs
src/connection/: async_connection.rs  command.rs  config.rs  manager.rs  ssh_cluster_connection.rs  ssh_tunnel.rs
src/db/: history_manager.rs  protos.rs
src/helpers/: common.rs  fs.rs  string.rs  ttl_cache.rs
src/states/: app.rs  i18n.rs  server.rs
src/states/server/: key.rs  list.rs  set.rs  stat.rs  string.rs  value.rs
src/views/: bytes_editor.rs  content.rs  editor.rs  hash_editor.rs  key_tree.rs  kv_table.rs  list_editor.rs  proto_editor.rs  servers.rs  set_editor.rs  sidebar.rs  status_bar.rs  string_editor.rs  title_bar.rs
