[package]
name = "zedis"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
dashmap = "6.1.0"
gpui = "0.2.2"
gpui-component = "0.4.0-preview3"
gpui-component-assets = "0.4.0-preview3"
gpui-macros = "0.2.2"
home = "0.5.12"
lsp-types = "0.97.0"
redis = { version = "1.0.0-rc.3", features = ["cluster"] }
rust-embed = "8.9.0"
serde = "1.0.228"
serde_json = "1.0.145"
snafu = "0.8.9"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"
