[package]
name = "zedis"
version = "0.1.9"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
categories = ["database"]
keywords = ["redis manager", "gpui", "redis client"]
description = "A blazing-fast, native Redis GUI built with Rust and GPUI."
license = "Apache-2.0"
homepage = "https://github.com/vicanso/zedis"
repository = "https://github.com/vicanso/zedis"
exclude = ["test/*", "Cargo.lock"]
readme = "./README.md"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
ahash = "0.8.12"
anyhow = "1.0.100"
arc-swap = "1.8.0"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.43"
dashmap = "6.1.0"
directories = "6.0.0"
flate2 = "1.1.8"
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
gpui-macros = "0.2.2"
home = "0.5.12"
humansize = "2.1.3"
humantime = "2.3.0"
infer = "0.19.0"
locale_config = "0.3.0"
lz4_flex = { version = "0.12.0", default-features = false }
mimalloc = { version = "0.1.48", optional = true }
os_info = "3.14.0"
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
pretty-hex = "0.4.1"
prost-reflect = { version = "0.16.3", features = ["serde"] }
protox = "0.9.1"
redb = "3.1.0"
redis = { version = "1.0.2", features = [
    "cluster",
    "cluster-async",
    "smol-comp",
    "smol-rustls-comp",
    "tls-rustls-insecure",
    "aio",
] }
regex = "1.12.2"
rmp-serde = "1.3.1"
russh = "0.56.0"
rust-embed = { version = "8.11.0", default-features = false }
rust-i18n = "3.1.5"
ruzstd = "0.8.2"
schemars = "1.2.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.148"
smol = "2.0.2"
snafu = "0.8.9"
snap = "1.1.1"
substring = "1.4.5"
tempfile = "3.24.0"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
url = "2.5.8"
uuid = "1.19.0"


[build-dependencies]
winres = "0.1.12"
vergen = { version = "9.1.0", features = ["build"] }
vergen-git2 = "9.1.0"


[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Zedis"
identifier = "com.bigtree.zedis"
icon = ["icons/zedis.icns"]
copyright = "Copyright © 2026 Tree xie. All rights reserved."
category = "public.app-category.developer-tools"
osx_minimum_system_version = "12.0"
short_description = "A high-performance Redis client written in Rust and GPUI."

[package.metadata.winres]
OriginalFilename = "zedis.exe"
LegalCopyright = "Copyright © 2026 Tree xie. All rights reserved."

[package.metadata.appimage]
assets = ["assets/zedis.desktop", "assets/icon.png"]
icon = "assets/icon.png"
desktop_entry = "assets/zedis.desktop"
